# smart-news

./: .env  pyproject.toml  requirements.txt
smart_news/: news_agent.py
