[tool.poetry]
name = "smart-news"
version = "0.1.0"
description = ""
authors = ["crm-dhu <donglin.hu@salesforce.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
swarm = {git = "https://github.com/openai/swarm.git"}
streamlit = "^1.39.0"
duckduckgo-search = "^6.3.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
